--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "wouter": "^2.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "ESLINT_NO_DEV_ERRORS=true react-scripts start",
     "build": "react-scripts build && cp public/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
