--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "wouter": "^2.7.4"
+    "wouter": "^2.7.4",
+    "@mui/icons-material": "^5.2.5"
   },
   "scripts": {
     "start": "ESLINT_NO_DEV_ERRORS=true react-scripts start",
